[package]
name = "lib60870-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings to lib60870-C, an IEC 60870-5-101/104 protocol implementation"
license = "GPL-3.0"
repository = "https://github.com/mz-automation/lib60870"
links = "lib60870"

[features]
default = []
# Enable printf debug output in lib60870
debug = []
# Disable threading support (for embedded systems)
no-threads = []
# Enable TCP keep-alive
tcp-keepalive = []
# TLS support (downloads and links mbedtls 2.28)
tls = []

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"
flate2 = "1.0"
tar = "0.4"
ureq = "3.1"

